--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <section class="calculator">
 
             <form>
-                <input type="number" class="screen" id="">
+                <input type="text" class="screen">
             </form>
             <div class="buttons">
                 <button type="button" class="btn btn-yellow" data-num="*">*</button>
@@ -31,8 +31,9 @@
                 <button type="button" class="btn btn-grey" data-num="1">1</button>
                 <button type="button" class="btn btn-grey" data-num="0">0</button>
 
-                <button type="button" class="btn btn-grey">=</button>
-                <button type="button" class="btn btn-grey">C</button>
+                <button type="button" class="btn btn-equal">=</button>
+                <button type="button" class="btn btn-clear">C</button>
+                <button type="button" class="btn btn-dot">.</button>
 
 
             </div>
